modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-processes/test_samples/constraint_templates/pss_baseline/002-allowed-no-hostpid-no-hostipc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-no-hostpid-no-hostipc
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
