modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-processes/test_samples/constraint_templates/pss_baseline/003-disallowed-hostipc-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-hostipc-true
  namespace: testns
spec:
  hostIPC: true
  containers:
    - name: nginx
      image: nginx
