modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-processes/test_samples/constraint_templates/pss_baseline/004-disallowed-hostpid-true-hostipc-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-hostpid-true-hostipc-true
  namespace: testns
spec:
  hostPID: true
  hostIPC: true
  containers:
    - name: nginx
      image: nginx
