modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-processes/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-host-processes
tests:
- name: pss-baseline
  template: ../../templates/security/allow-host-processes.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 002-allowed-no-hostpid-no-hostipc
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-allowed-no-hostpid-no-hostipc.yaml
    assertions:
    - violations: no
  - name: 001-allowed-multiple-containers-no-hostpid-no-hostipc
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-multiple-containers-no-hostpid-no-hostipc.yaml
    assertions:
    - violations: no
  - name: 005-disallowed-hostpid-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/005-disallowed-hostpid-true.yaml
    assertions:
    - violations: yes
  - name: 003-disallowed-hostipc-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-disallowed-hostipc-true.yaml
    assertions:
    - violations: yes
  - name: 004-disallowed-hostpid-true-hostipc-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/004-disallowed-hostpid-true-hostipc-true.yaml
    assertions:
    - violations: yes
- name: security-policy
  template: ../../templates/security/allow-host-processes.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 008-allowed-hostpid-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/008-allowed-hostpid-true.yaml
    assertions:
    - violations: no
  - name: 006-allowed-hostipc-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/006-allowed-hostipc-true.yaml
    assertions:
    - violations: no
  - name: 007-allowed-hostpid-true-hostipc-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/007-allowed-hostpid-true-hostipc-true.yaml
    assertions:
    - violations: no
  - name: 009-allowed-no-hostpid-no-hostipc
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/009-allowed-no-hostpid-no-hostipc.yaml
    assertions:
    - violations: no
- name: security-policy-with-exception
  template: ../../templates/security/allow-host-processes.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 013-020-allowed-by-exception-hostpid-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-hostpid-true.yaml
    object: test_samples/security_policy_exceptions/pods/020-allowed-by-exception-hostpid-true.yaml
    assertions:
    - violations: no
  - name: 010-016-allowed-by-exception-hostipc-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-hostipc-true.yaml
    object: test_samples/security_policy_exceptions/pods/016-allowed-by-exception-hostipc-true.yaml
    assertions:
    - violations: no
  - name: 012-019-allowed-by-exception-hostpid-true-hostipc-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/012-allow-hostpid-true-hostipc-true.yaml
    object: test_samples/security_policy_exceptions/pods/019-allowed-by-exception-hostpid-true-hostipc-true.yaml
    assertions:
    - violations: no
  - name: 011-017-allowed-by-exception-hostpid-false-hostipc-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-allow-hostpid-false-hostipc-false.yaml
    object: test_samples/security_policy_exceptions/pods/017-allowed-by-exception-hostpid-false-hostipc-false.yaml
    assertions:
    - violations: no
  - name: 013-022-disallowed-by-exception-hostpid-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-hostpid-true.yaml
    object: test_samples/security_policy_exceptions/pods/022-disallowed-by-exception-hostpid-mismatch.yaml
    assertions:
    - violations: no
  - name: 010-021-disallowed-by-exception-hostipc-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-hostipc-true.yaml
    object: test_samples/security_policy_exceptions/pods/021-disallowed-by-exception-hostipc-mismatch.yaml
    assertions:
    - violations: no
  - name: 011-023-allowed-exception-allows-false-but-constraint-allows-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-allow-hostpid-false-hostipc-false.yaml
    object: test_samples/security_policy_exceptions/pods/023-disallowed-exception-allows-false-constraint-allows-true.yaml
    assertions:
    - violations: no
- name: security-policy-restrictive-with-exception
  template: ../../templates/security/allow-host-processes.yaml
  constraint: constraint_pss_deny_all.yaml
  cases:
  - name: 013-018-allowed-by-exception-hostpid-true-despite-constraint-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-hostpid-true.yaml
    object: test_samples/security_policy_exceptions/pods/018-allowed-by-exception-hostpid-true-despite-constraint-false.yaml
    assertions:
    - violations: no
  - name: 010-015-allowed-by-exception-hostipc-true-despite-constraint-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-hostipc-true.yaml
    object: test_samples/security_policy_exceptions/pods/015-allowed-by-exception-hostipc-true-despite-constraint-false.yaml
    assertions:
    - violations: no
  - name: 024-disallowed-no-exception-hostpid-true-restrictive
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/024-disallowed-no-exception-hostpid-true-restrictive.yaml
    assertions:
    - violations: yes
  - name: 013-022-disallowed-by-exception-hostpid-mismatch-restrictive
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-hostpid-true.yaml
    object: test_samples/security_policy_exceptions/pods/022-disallowed-by-exception-hostpid-mismatch.yaml
    assertions:
    - violations: yes
  - name: 010-021-disallowed-by-exception-hostipc-mismatch-restrictive
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-hostipc-true.yaml
    object: test_samples/security_policy_exceptions/pods/021-disallowed-by-exception-hostipc-mismatch.yaml
    assertions:
    - violations: yes
  - name: 025-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/025-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 014-026-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/014-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/026-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
